# ffs

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  README_anvil.md  clap-markdown-list  flake.nix
network/fcp/cli/network/: Cargo.toml
network/mcr/cli/coordinator/: Cargo.toml
network/mcr/cli/coordinator/docs/cli/: README.md
network/mcr/cli/coordinator/src/: main.rs
network/mcr/cli/coordinator/src/cli/: mod.rs
network/mcr/cli/coordinator/src/cli/eth/: mod.rs
network/mcr/cli/coordinator/src/cli/eth/anvil/: mod.rs
network/mcr/cli/coordinator/src/cli/eth/live/: mod.rs
network/mcr/cli/coordinator/tests/basic/: Cargo.toml
network/mcr/components/anvil/: Cargo.toml
network/mcr/components/anvil/src/: main.rs
network/mcr/components/anvil/src/anvil/: parser.rs
network/mcr/components/anvil/src/dev/lifecycle/deploy/: mod.rs
network/mcr/components/anvil/src/dev/lifecycle/up/: mod.rs
network/mcr/coordinator/kestrel/: Cargo.toml
network/mcr/coordinator/kestrel/src/: lib.rs
network/pcp/cli/coordinator/: Cargo.toml
network/pcp/cli/coordinator/src/: main.rs
network/pcp/cli/coordinator/src/cli/: mod.rs
network/pcp/cli/coordinator/src/cli/eth/: mod.rs
network/pcp/cli/coordinator/src/cli/eth/anvil/: mod.rs
network/pcp/cli/coordinator/src/cli/eth/live/: mod.rs
node/mcr/cli/service/light/eth/: Cargo.toml
node/mcr/cli/service/light/eth/docs/cli/: README.md
node/mcr/cli/service/light/eth/src/: main.rs
node/mcr/cli/service/light/eth/src/cli/: mod.rs
node/mcr/node/light/eth/exln/: Cargo.toml
node/mcr/node/light/eth/exln/src/config/: mod.rs
node/mcr/node/light/eth/exln/src/node/: mod.rs
protocol-units/pcp/manager/: Cargo.toml
protocol-units/pcp/manager/src/: manager.rs
protocol-units/post-confirmations/config/: Cargo.toml
protocol-units/post-confirmations/config/src/common/: deploy.rs  eth_connection.rs  settlement.rs  staking.rs  testing.rs  transactions.rs
protocol/mcr/actors/manager/: Cargo.toml
protocol/mcr/actors/manager/src/: manager.rs
protocol/mcr/cli/client/: Cargo.toml
protocol/mcr/cli/client/abis/: MCR.json  MOVEToken.json  MovementStaking.json
protocol/mcr/cli/client/docs/cli/: README.md
protocol/mcr/cli/client/src/cli/: mod.rs
protocol/mcr/cli/client/src/cli/check_commitment/: mod.rs
protocol/mcr/cli/client/src/cli/check_postconfirmation/: mod.rs
protocol/mcr/cli/client/src/cli/deploy/: mod.rs
protocol/mcr/cli/client/src/cli/eth/: mod.rs  post_admin_commitment.rs
protocol/mcr/cli/client/src/cli/eth/emln/: mod.rs
protocol/mcr/cli/client/src/cli/eth/exln/: mod.rs
protocol/mcr/cli/client/src/cli/eth/get_accepted_commitment_at_height/: mod.rs  mod.rs_OLD
protocol/mcr/cli/client/src/cli/eth/get_block_commitment/: mod.rs
protocol/mcr/cli/client/src/cli/eth/get_commitment/: mod.rs
protocol/mcr/cli/client/src/cli/eth/get_commitment_at_height/: mod.rs
protocol/mcr/cli/client/src/cli/eth/get_stake/: mod.rs
protocol/mcr/cli/client/src/cli/light_node_proto/: mod.rs
protocol/mcr/cli/client/src/cli/post_commitment/: mod.rs
protocol/mcr/cli/client/src/cli/stake/: mod.rs
protocol/mcr/cli/client/src/cli/standard/: mod.rs
protocol/mcr/cli/deployer/: Cargo.toml
protocol/mcr/cli/deployer/docs/cli/: README.md
protocol/mcr/cli/deployer/src/: main.rs
protocol/mcr/cli/deployer/src/cli/: mod.rs
protocol/mcr/cli/deployer/src/cli/eth/: deploy.rs  mod.rs
protocol/mcr/cli/protocol/: Cargo.toml
protocol/mcr/cli/protocol/docs/cli/: README.md
protocol/mcr/cli/protocol/src/: main.rs
protocol/mcr/cli/protocol/src/cli/: mod.rs
protocol/mcr/clients/light-node-proto/: Cargo.toml
protocol/mcr/clients/light-node-proto/src/client/: mod.rs
protocol/mcr/clients/light-node-proto/src/config/: mod.rs
protocol/mcr/clients/mock/: Cargo.toml
protocol/mcr/clients/mock/src/: lib.rs
protocol/mcr/clients/util/: Cargo.toml
protocol/mcr/clients/util/src/: lib.rs
protocol/mcr/dlu/eth/deployer-core/: Cargo.toml  README.md  build.rs
protocol/mcr/dlu/eth/deployer-core/src/contracts/: mod.rs
protocol/mcr/dlu/eth/deployer-core/src/dev/: mod.rs
protocol/mcr/util/types/: Cargo.toml
protocol/mcr/util/types/src/: block_commitment.rs  commitment.rs
protocol/pcp/cli/client/: Cargo.toml
protocol/pcp/cli/client/abis/: MOVEToken.json  MovementStaking.json  PCP.json
protocol/pcp/cli/client/src/: eth_client.rs  lib.rs  main.rs  mock.rs  send_eth_transaction.rs
protocol/pcp/cli/client/src/cli/: mod.rs
protocol/pcp/cli/client/src/cli/deploy/: mod.rs
protocol/pcp/cli/client/src/cli/eth/: mod.rs  post_admin_commitment.rs
protocol/pcp/cli/client/src/cli/post_commitment/: mod.rs
protocol/pcp/cli/protocol/: Cargo.toml
protocol/pcp/cli/protocol/src/: main.rs
protocol/pcp/cli/protocol/src/cli/: mod.rs
protocol/pcp/clients/eth/: Cargo.toml
protocol/pcp/clients/eth/abis/: MCR.json  MOVEToken.json  MovementStaking.json  PCP.json
protocol/pcp/clients/eth/src/client/: mod.rs
protocol/pcp/clients/eth/src/config/: mod.rs
protocol/pcp/clients/eth/src/util/: send_eth_transaction.rs
protocol/pcp/clients/util/: Cargo.toml
protocol/pcp/clients/util/src/: lib.rs
protocol/pcp/manager/: Cargo.toml
protocol/pcp/manager/src/: lib.rs  manager.rs
protocol/pcp/runner/: Cargo.toml
protocol/pcp/runner/src/: main.rs
protocol/pcp/util/types/: Cargo.toml
protocol/pcp/util/types/src/: block_commitment.rs  commitment.rs  lib.rs
sdk/cli/ffs-dev/: Cargo.toml  README.md
sdk/cli/ffs-dev/docs/: README.md  cli
sdk/cli/ffs-dev/docs/cli/: README.md
sdk/cli/ffs-dev/src/: main.rs
sdk/cli/ffs-dev/src/cli/: mod.rs
sdk/cli/ffs-dev/src/cli/mcr/: mod.rs
sdk/cli/ffs-dev/src/cli/pcp/: mod.rs
util/clap-markdown-ext/: Cargo.toml
util/clap-markdown-ext/src/: lib.rs
util/clap-markdown-ext/src/file/: mod.rs
util/clap-markdown-ext/src/generate/: mod.rs
util/clap-markdown-ext/src/print/: mod.rs
util/clap-markdown-ext/src/workspace/: mod.rs
util/orfile/macro/: Cargo.toml
util/orfile/macro/src/: derive.rs  lib.rs
util/signing/eth/: Cargo.toml
util/signing/eth/src/: lib.rs
(+388 files in other folders)
