[workspace]

resolver = "2"

members = [
  "protocol/mcr/util/*",
  "protocol/mcr/clients/*",
  "protocol/mcr/client",
  "protocol/mcr/manager",
  "protocol/post-confirmations/*",
  "protocol/fast-confirmations/*",
  "protocol/ffs/*",
  "util/signing/eth",
  "util/environment",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Movement Labs"]
repository = "www.github.com/movementlabsxyz/ffs"
homepage = "www.github.com/movementlabsxyz/ffs"
publish = false
rust-version = "1.81.0"

[workspace.dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy.git", package = "alloy", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2", features = [
  "node-bindings",
  "rpc-types-trace",
  "json-rpc",
  "json-abi",
  "rpc-client",
  "signers",
  "signer-yubihsm",
  "pubsub",
  "providers",
] }
alloy-rpc-types-eth = "0.1.3"
alloy-eips = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-network = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-primitives = { version = "0.7.2", default-features = false }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2", features = [
  "ws",
] }
alloy-rlp = "0.3.5"
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-sol-types = { version = "0.7.2", features = ["json"] }
alloy-signer = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2", features = ["reqwest-rustls-tls"] }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
anyhow = "1.0"
async-stream = "0.3.0"
async-trait = "0.1.71"
futures = "0.3.17"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2.5"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tokio-stream = "0.1.15"

# secure-signing
secure-signer = { git = "https://github.com/movementlabsxyz/secure-signing.git", rev = "62d9ae5fd098d2c0d2a2da2004ada91681e0df53" }
secure-signer-loader = { git = "https://github.com/movementlabsxyz/secure-signing.git", rev = "62d9ae5fd098d2c0d2a2da2004ada91681e0df53"  }
secure-signer-aws-kms = { git = "https://github.com/movementlabsxyz/secure-signing.git", rev = "62d9ae5fd098d2c0d2a2da2004ada91681e0df53"  }

# internal
## mcr
mcr-types = { path = "protocol/mcr/util/types" }
mcr-config = { path = "protocol/mcr/util/config" }
mcr-client-util = { path = "protocol/mcr/clients/util" }
mcr-settlement-client = { path = "protocol/mcr/client" }
secure-signing-eth = { path = "util/signing/eth" }
ffs-environment = { path = "util/environment" }

[workspace.lints.clippy]
debug_assert_with_mut_call = "deny"
inefficient_to_string = "deny"
map_flatten = "deny"
manual_ok_or = "deny"
doc_link_with_quotes = "deny"
match_same_arms = "deny"
semicolon_if_nothing_returned = "deny"

[profile.dev]
panic = "unwind"

[profile.release.build-override]
opt-level = 3