[workspace]

resolver = "2"

members = [

  # mcr
  "protocol/mcr/util/*",
  "protocol/mcr/clients/*",
  "protocol/mcr/manager",
  "protocol/mcr/cli/*",

  # pcp
  ## protocol
  "protocol/pcp/cli/*",
  ## node
  "node/pcp/cli/*",
  ## network
  "network/pcp/cli/*",

  # fcp
  ## protocol
  "protocol/fcp/cli/*",
  ## node
  "node/fcp/cli/*",
  ## network
  "network/fcp/cli/*",

  # ffs
  ## protocol
  "protocol/ffs/cli/*",
  ## node
  "node/ffs/cli/*",
  ## network
  "network/ffs/cli/*",
  ## sdk
  "sdk/cli/*",

  # util
  "util/signing/eth",
  "util/environment",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Movement Labs"]
repository = "www.github.com/movementlabsxyz/ffs"
homepage = "www.github.com/movementlabsxyz/ffs"
publish = false
rust-version = "1.81.0"

[workspace.dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy.git", package = "alloy", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2", features = [
  "node-bindings",
  "rpc-types-trace",
  "json-rpc",
  "json-abi",
  "rpc-client",
  "signers",
  "signer-yubihsm",
  "pubsub",
  "providers",
] }
alloy-rpc-types-eth = "0.1.3"
alloy-eips = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-network = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-primitives = { version = "0.7.2", default-features = false }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2", features = [
  "ws",
] }
alloy-rlp = "0.3.5"
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-sol-types = { version = "0.7.2", features = ["json"] }
alloy-signer = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2", features = ["reqwest-rustls-tls"] }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy.git", rev = "83343b172585fe4e040fb104b4d1421f58cbf9a2" }
anyhow = "1.0"
async-stream = "0.3.0"
async-trait = "0.1.71"
clap = { version = "4.4.10", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.17"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2.5"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tokio-stream = "0.1.15"

# model checking and verification


# secure-signing
secure-signer = { git = "https://github.com/movementlabsxyz/secure-signing.git", rev = "62d9ae5fd098d2c0d2a2da2004ada91681e0df53" }
secure-signer-loader = { git = "https://github.com/movementlabsxyz/secure-signing.git", rev = "62d9ae5fd098d2c0d2a2da2004ada91681e0df53"  }
secure-signer-aws-kms = { git = "https://github.com/movementlabsxyz/secure-signing.git", rev = "62d9ae5fd098d2c0d2a2da2004ada91681e0df53"  }

# internal
## mcr
### protocol
mcr-types = { path = "protocol/mcr/util/types" }
mcr-config = { path = "protocol/mcr/util/config" }
mcr-protocol-client-core-util = { path = "protocol/mcr/clients/util" }
mcr-protocol-client-core-eth = { path = "protocol/mcr/clients/eth" }
mcr-protocol-client-core-mock = { path = "protocol/mcr/clients/mock" }
mcr-protocol-client = { path = "protocol/mcr/cli/client" }
mcr-protocol = { path = "protocol/mcr/cli"}
### network
mcr-network-client = { path = "network/mcr/cli/client" }
mcr-network-coordinator = { path = "network/mcr/cli/coordinator" }
mcr-network = { path = "network/mcr/cli/network" }

## pcp
### protocol
pcp-types = { path = "protocol/pcp/util/types" }
pcp-config = { path = "protocol/pcp/util/config" }
pcp-protocol-client-core-util = { path = "protocol/pcp/clients/util" }
pcp-protocol-client-core-eth = { path = "protocol/pcp/clients/eth" }
pcp-protocol-client-core-mock = { path = "protocol/pcp/clients/mock" }
pcp-protocol-client = { path = "protocol/pcp/cli/client" }
pcp-protocol = { path = "protocol/pcp/cli"}
### network
pcp-network-client = { path = "network/pcp/cli/client" }
pcp-network-coordinator = { path = "network/pcp/cli/coordinator" }
pcp-network = { path = "network/pcp/cli/network" }

# util
secure-signer-eth = { path = "util/signing/eth" }
ffs-environment = { path = "util/environment" }

# Movement dependencies
dot-movement = { git = "https://github.com/movementlabsxyz/movement.git", branch = "main" }
movement-types = { git = "https://github.com/movementlabsxyz/movement.git", branch = "main" }

hex = "0.4"
sha3 = "0.10"

[workspace.lints.clippy]
debug_assert_with_mut_call = "deny"
inefficient_to_string = "deny"
map_flatten = "deny"
manual_ok_or = "deny"
doc_link_with_quotes = "deny"
match_same_arms = "deny"
semicolon_if_nothing_returned = "deny"

[profile.dev]
panic = "unwind"

[profile.release.build-override]
opt-level = 3