[workspace]

resolver = "2"

members = [

  # common
  "network/common/components/*",

  # mcr
  "protocol/mcr/util/*",
  "protocol/mcr/clients/*",
  "protocol/mcr/manager",
  "protocol/mcr/cli/*",
  "protocol/mcr/dlu/eth/deployer-core",
  "network/mcr/cli/*",
  "network/mcr/components/eth/*",

  # pcp
  "protocol/pcp/util/*",
  "protocol/pcp/clients/*",
  "protocol/pcp/cli/*",
  "protocol/pcp/dlu/eth/deployer-core",
  ## node
  "node/pcp/cli/*",
  ## network
  "network/pcp/cli/*",

  # fcp
  ## protocol
  "protocol/fcp/cli/*",
  ## node
  "node/fcp/cli/*",
  ## network
  "network/fcp/cli/*",

  # ffs
  ## protocol
  "protocol/ffs/cli/*",
  ## node
  "node/ffs/cli/*",
  ## network
  "network/ffs/cli/*",
  ## sdk
  "sdk/cli/*",

  # util
  "util/signing/eth",
  "util/environment",
  "util/commander",
  "util/clap-markdown-ext",
  "util/orfile/*"
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Movement Labs"]
repository = "www.github.com/movementlabsxyz/ffs"
homepage = "www.github.com/movementlabsxyz/ffs"
publish = false
rust-version = "1.81.0"

[workspace.dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy.git", package = "alloy", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5", features = [
  "node-bindings",
  "rpc-types-trace",
  "json-rpc",
  "json-abi",
  "rpc-client",
  "signers",
  "signer-yubihsm",
  "pubsub",
  "providers",
] }
alloy-rpc-types-eth = "0.12"
alloy-eips = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5" }
alloy-network = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5" }
alloy-primitives = { version = "0.8.22", default-features = false }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5", features = [
  "ws",
] }
alloy-rlp = "0.3.9"
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5" }
alloy-sol-types = { version = "0.8.22", features = ["json"] }
alloy-signer = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5", features = ["reqwest-rustls-tls"] }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy.git", rev = "bc190c61f1bee74271a29ea6275ab674fcfe73d5" }
anyhow = "1.0"
async-stream = "0.3.0"
async-trait = "0.1.71"
clap = { version = "4.4.10", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.17"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2.5"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tokio-stream = "0.1.15"
hex = { version = "0.4.3", default-features = false, features = [
  "alloc",
  "serde",
] }
zip = { version = "2.4.2", features = ["flate2"] }
walkdir = "2.3.2"
tempfile = "3.5.0"
itertools = "0.14.0"
regex = "1.9.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0.23"
proc-macro2 = "1.0.32"
strip-ansi-escapes = "0.2.1"
cargo_metadata = "0.19.2"

# model checking and verification


# secure-signing
secure-signer = { git = "https://github.com/movementlabsxyz/secure-signing.git", rev = "62d9ae5fd098d2c0d2a2da2004ada91681e0df53" }
secure-signer-loader = { git = "https://github.com/movementlabsxyz/secure-signing.git", rev = "62d9ae5fd098d2c0d2a2da2004ada91681e0df53"  }
secure-signer-aws-kms = { git = "https://github.com/movementlabsxyz/secure-signing.git", rev = "62d9ae5fd098d2c0d2a2da2004ada91681e0df53"  }

# kestrel 
kestrel = { git = "https://github.com/movementlabsxyz/kestrel.git", rev = "c5c9b30ba2532f606485ad5a08da40d2940491fa" }
jsonlvar = { git = "https://github.com/movementlabsxyz/kestrel.git", rev = "c5c9b30ba2532f606485ad5a08da40d2940491fa" }

# docs
clap-markdown = { git = "https://github.com/ConnorGray/clap-markdown.git", rev = "1e1ae469444604d5b9ee650232abc2d3a0fa723b"}

# internal
## common
### protocol
network-anvil-component-core = { path = "network/common/components/anvil" }

## mcr
### protocol
mcr-types = { path = "protocol/mcr/util/types" }
mcr-config = { path = "protocol/mcr/util/config" }
mcr-protocol-client-core-util = { path = "protocol/mcr/clients/util" }
mcr-protocol-client-eth-core = { path = "protocol/mcr/clients/eth" }
mcr-protocol-client-core-mock = { path = "protocol/mcr/clients/mock" }
mcr-protocol-client = { path = "protocol/mcr/cli/client" }
mcr-protocol = { path = "protocol/mcr/cli/protocol"}
mcr-protocol-deployer-eth-core = { path = "protocol/mcr/dlu/eth/deployer-core" }
### network
mcr-network-client = { path = "network/mcr/cli/client" }
mcr-network-coordinator = { path = "network/mcr/cli/coordinator" }
mcr-network = { path = "network/mcr/cli/network" }
mcr-network-anvil-component-core = { path = "network/mcr/components/eth/anvil" }
mcr-network-eth-live-component-core = { path = "network/mcr/components/eth/live" }

## pcp
### protocol
pcp-types = { path = "protocol/pcp/util/types" }
pcp-config = { path = "protocol/pcp/util/config" }
pcp-protocol-client-core-util = { path = "protocol/pcp/clients/util" }
pcp-protocol-client-core-eth = { path = "protocol/pcp/clients/eth" }
pcp-protocol-client-core-mock = { path = "protocol/pcp/clients/mock" }
pcp-protocol-client = { path = "protocol/pcp/cli/client" }
pcp-protocol = { path = "protocol/pcp/cli"}
pcp-protocol-deployer-core-eth = { path = "protocol/pcp/dlu/eth/deployer-core" }
### network
pcp-network-client = { path = "network/pcp/cli/client" }
pcp-network-coordinator = { path = "network/pcp/cli/coordinator" }
pcp-network = { path = "network/pcp/cli/network" }

# sdk
ffs-dev = { path = "sdk/cli/ffs-dev" }

# util
secure-signer-eth = { path = "util/signing/eth" }
ffs-environment = { path = "util/environment" }
commander = { path = "util/commander" }
clap-markdown-ext = { path = "util/clap-markdown-ext" }
orfile = { path = "util/orfile/orfile" }
orfile-util = { path = "util/orfile/util" }
orfile-macro = { path = "util/orfile/macro" }

[workspace.lints.clippy]
debug_assert_with_mut_call = "deny"
inefficient_to_string = "deny"
map_flatten = "deny"
manual_ok_or = "deny"
doc_link_with_quotes = "deny"
match_same_arms = "deny"
semicolon_if_nothing_returned = "deny"

[profile.dev]
panic = "unwind"

[profile.release.build-override]
opt-level = 3