[package]
name = "clap-markdown-ext"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
clap-markdown = { workspace = true}
clap = { workspace = true }
anyhow = { workspace = true }
cargo_metadata = { workspace = true }

[lints]
workspace = true
