[package]
name = "post-confirmationssettlement-manager"
version = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
post-confirmationsconfig = { workspace = true }
post-confirmationssettlement-client = { workspace = true }
movement-types = { workspace = true }

anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
post-confirmationssettlement-client = { workspace = true, features = ["mock"] }

[features]
default = ["stub"]
stub = []

[lints]
workspace = true
