[package]
name = "post-confirmationsconfig"
description = "Configuration of the MCR settlement client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true , features = ["derive"] }
alloy = { workspace = true }
ffs-environment = { workspace = true }
anyhow = { workspace = true }
secure-signer-loader = { workspace = true }
secure-signer = { workspace = true}

[lints]
workspace = true
