[package]
name = "postconfirmationssettlement-runner"
description = "An Anvil runner for the PCP Settlement"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
postconfirmationsconfig = { workspace = true }
postconfirmationssettlement-client = { workspace = true }
postconfirmationssettlement-setup = { workspace = true }
dot-movement = { workspace = true }
commander = { workspace = true }

alloy-primitives = { workspace = true }

anyhow = { workspace = true }
k256 = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ffs-environment = { workspace = true }

[lints]
workspace = true
