[package]
name = "ffs-dev"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }


[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true}
dotenv = { workspace = true }
anyhow = { workspace = true }
clap-markdown-ext = { workspace = true }

# mcr
mcr-network = { workspace = true }
mcr-protocol = { workspace = true }

# pcp
# pcp-network = { workspace = true }
# pcp-protocol = { workspace = true }

[lints]
workspace = true