[package]
name = "secure-signing-eth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
secure-signer = { workspace = true }
secure-signer-aws-kms = { workspace = true }
async-trait.workspace = true

# Alloy needed crates
alloy-primitives.workspace = true
alloy-signer.workspace = true
alloy-network.workspace = true
alloy-consensus.workspace = true
alloy-transport-http = { workspace = true, features = ["reqwest-rustls-tls"] }
k256 = "0.13.4"

[lints]
workspace = true
