[package]
name = "mcr-network-coordinator"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true}
dotenv = { workspace = true }
anyhow = { workspace = true }
mcr-protocol-deployer-eth-core = { workspace = true }
mcr-network-anvil-component-core = { workspace = true }
mcr-network-eth-live-component-core = { workspace = true }
kestrel = { workspace = true }
jsonlvar = { workspace = true }
orfile = { workspace = true }
serde_json = { workspace = true }
clap-markdown-ext = { workspace = true }

[lints]
workspace = true
