[package]
name = "mcr-network-kestrel-coordinator"
version = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcr-protocol-client-core-util = { workspace = true }

anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde_json = { workspace = true }
mcr-types = { workspace = true }
mcr-config = { workspace = true }
kestrel = { workspace = true }
mcr-protocol-deployer-core-eth = { workspace = true }
strip-ansi-escapes = { workspace = true }

[dev-dependencies]
mcr-protocol-client-core-mock = { workspace = true }

[lints]
workspace = true
