[package]
name = "mcr-protocol-client"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, version = "4.4.11", features = ["derive"] }
dotenv = { workspace = true }
anyhow = { workspace = true, version = "1.0.75" }
mcr-protocol-client-core-util = { workspace = true }
mcr-protocol-client-eth-core = { workspace = true }
mcr-protocol-deployer-eth-core = { workspace = true }
mcr-types = { workspace = true }
hex = { workspace = true }
sha3 = "0.10.0"
secure-signer-loader = { workspace = true }

[lints]
workspace = true
