[package]
name = "mcr-protocol-client"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
dotenv = { workspace = true }
anyhow = { workspace = true }
mcr-protocol-client-core-util = { workspace = true }
mcr-protocol-client-eth-core = { workspace = true }
mcr-protocol-deployer-eth-core = { workspace = true }
mcr-protocol-client-light-node-proto-core = { workspace = true }
mcr-types = { workspace = true }
hex = { workspace = true }
sha3 = "0.10.0"
secure-signer-loader = { workspace = true }
tokio-stream = { workspace = true }
clap-markdown-ext = { workspace = true }
orfile = { workspace = true }

[lints]
workspace = true
