[package]
name = "mcr-protocol"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true}
dotenv = { workspace = true }
anyhow = { workspace = true }
mcr-protocol-client = { workspace = true }
mcr-protocol-deployer = { workspace = true }
clap-markdown-ext = { workspace = true }

[lints]
workspace = true