[package]
name = "mcr-protocol-client-light-node-proto-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
alloy-primitives = { workspace = true }

futures = { workspace = true }
tracing-subscriber = { workspace = true }
mcr-types = { workspace = true }
mcr-protocol-client-core-util = { workspace = true }
mcr-light-node-proto = { workspace = true, features = ["client"] }
tonic = { workspace = true, features = ["tls", "tls-webpki-roots"] }

[lints]
workspace = true
