[package]
name = "mcr-protocol-client-core-mock"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
mcr-types = { workspace = true }
mcr-protocol-client-core-util = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true}

[lints]
workspace = true
