[package]
name = "pcp-protocol-client"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "test-postconfirmationssettlement-client"
# path = "src/bin/e2e/test_client_settlement.rs"


[dependencies]
secure-signer-loader = { workspace = true }
secure-signer = { workspace = true }
secure-signer-eth = { workspace = true }
pcp-types = { workspace = true }
pcp-config = { workspace = true }
pcp-protocol-client-core-util = { workspace = true }
pcp-protocol-client-core-eth = { workspace = true }
hex = { workspace = true }
sha3 = { workspace = true }

alloy = { workspace = true, features = [
    "node-bindings",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signers",
    "signer-yubihsm",
    "pubsub",
    "providers",
] }
alloy-contract = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true, features = [] }
alloy-signer = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-transport = { workspace = true }
alloy-transport-ws = { workspace = true }

anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
# movement-types = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

ffs-environment = { workspace = true }

# dot-movement = { workspace = true }
alloy-rpc-types = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true }

[features]
default = ["eth"]
e2e = ["eth"]
eth = []
mock = []

[lints]
workspace = true




# [package]
# name = "pcp-protocol-client"
# version = { workspace = true }
# edition = { workspace = true }
# license = { workspace = true }
# authors = { workspace = true }
# homepage = { workspace = true }
# publish = { workspace = true }
# rust-version = { workspace = true }

# [dependencies]
# tokio = { workspace = true }
# serde = { workspace = true, features = ["derive"] }
# clap = { workspace = true}
# dotenv = { workspace = true }
# anyhow = { workspace = true }
# pcp-protocol-client-core-util = { workspace = true }
# pcp-protocol-client-core-eth = { workspace = true }
# pcp-types = { workspace = true }

# [lints]
# workspace = true
