[package]
name = "pcp-protocol-client"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true}
dotenv = { workspace = true }
anyhow = { workspace = true }
pcp-protocol-client-core-util = { workspace = true }
pcp-protocol-client-core-eth = { workspace = true }
pcp-types = { workspace = true }
hex = { workspace = true }
sha3 = "0.10.0"
secure-signer-loader = { workspace = true }

[lints]
workspace = true
